fixed z-index issue related to field validation notification

--- a/css/control/form.less
+++ b/css/control/form.less
@@ -33,6 +33,7 @@ form {
     }
     .error {
       position: absolute;
+      z-index: 1000;
       left: 103%;
       top: 10px;
       line-height: 26px;
